User Authentication 'Unauthenticated senders not allowed' needs to be fixed

--- a/config/application.yml
+++ b/config/application.yml
@@ -12,4 +12,6 @@
 SENDGRID_PASSWORD: exAmplePa$$
 SENDGRID_USERNAME: myspecialusername
 
+##added for practice
+SECRET_KEY_BASE: thegeneratedtoken 
 #Y_SUPER_SECRET_VARIABLE: secret123456
