--- a/config/application.yml
+++ b/config/application.yml
@@ -9,8 +9,8 @@
 # production:
 #   stripe_api_key: sk_live_EeHnL644i6zo4Iyq4v1KdV9H
 #   stripe_publishable_key: pk_live_9lcthxpSIHbGwmdO941O1XVU
-SENDGRID_PASSWORD: exAmplePa$$
-SENDGRID_USERNAME: myspecialusername
+SENDGRID_PASSWORD: 'alicia16'
+SENDGRID_USERNAME: 'app36309919@heroku.com'
 
 ##added for practice
 SECRET_KEY_BASE: thegeneratedtoken 
