--- a/config/application.yml
+++ b/config/application.yml
@@ -1,27 +1,14 @@
-# Add configuration values here, as shown below.
-#
-# pusher_app_id: "2954"
-# pusher_key: 7381a978f7dd7f9a1117
-# pusher_secret: abdc3b896a0ffb85d373
-# stripe_api_key: sk_test_2J0l093xOyW72XUYJHE4Dv2r
-# stripe_publishable_key: pk_test_ro9jV5SNwGb1yYlQfzG17LHK
-#
-# production:
-#   stripe_api_key: sk_live_EeHnL644i6zo4Iyq4v1KdV9H
-#   stripe_publishable_key: pk_live_9lcthxpSIHbGwmdO941O1XVU
-SENDGRID_PASSWORD: 'alicia16'
-SENDGRID_USERNAME: 'app36309919@heroku.com'
 
-##added for practice
-SECRET_KEY_BASE: thegeneratedtoken 
-#Y_SUPER_SECRET_VARIABLE: secret123456
+SENDGRID_PASSWORD: alicia16
+SENDGRID_USERNAME: app36309919@heroku.com
 
-AWS_ACCESS_KEY_ID:  'AKIAJS3MGY3CS4STIVWQ'
-AWS_SECRET_ACCESS_KEY: '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'
-development:
-  AWS_BUCKET: 'bloccit-development-junko'
-production:
-  AWS_BUCKET: 'uploading-img-bloccit-production'
+DEVISE_SECRET_KEY:  thegeneratedtoken 
+
+ AWS_ACCESS_KEY_ID: AKIAJARZVU2DV3V5W7HQ
+ AWS_SECRET_ACCESS_KEY: JSRwZuZbOn3gnimF+8af0w1yfvEKoTirjL8Ko+D
+ development:
+   AWS_BUCKET: bloccit-development-junko
+ production:
+   AWS_BUCKET: uploading-img-bloccit-production
 
 
-Secret Access Key:
